// Code generated by sqlc. DO NOT EDIT.
// versions:
//   sqlc v1.27.0

package db

import (
	"time"

	"github.com/google/uuid"
	"github.com/jackc/pgx/v5/pgtype"
)

type AppointmentSlot struct {
	ID             uuid.UUID   `json:"id"`
	LocationID     uuid.UUID   `json:"location_id"`
	ServiceID      uuid.UUID   `json:"service_id"`
	PractitionerID pgtype.UUID `json:"practitioner_id"`
	RoomID         pgtype.UUID `json:"room_id"`
	StartAt        time.Time   `json:"start_at"`
	EndAt          time.Time   `json:"end_at"`
	Capacity       int32       `json:"capacity"`
	BookedCount    int32       `json:"booked_count"`
	Status         string      `json:"status"`
	CreatedAt      time.Time   `json:"created_at"`
	UpdatedAt      time.Time   `json:"updated_at"`
	DeletedAt      time.Time   `json:"deleted_at"`
}

type Booking struct {
	ID              uuid.UUID          `json:"id"`
	LocationID      uuid.UUID          `json:"location_id"`
	SlotID          uuid.UUID          `json:"slot_id"`
	Status          string             `json:"status"`
	GuestName       string             `json:"guest_name"`
	GuestEmail      string             `json:"guest_email"`
	GuestPhone      pgtype.Text        `json:"guest_phone"`
	GuestNotes      pgtype.Text        `json:"guest_notes"`
	ClientUsername  pgtype.Text        `json:"client_username"`
	BookedAt        time.Time          `json:"booked_at"`
	CancelledAt     pgtype.Timestamptz `json:"cancelled_at"`
	CancelReason    pgtype.Text        `json:"cancel_reason"`
	CancelTokenHash string             `json:"cancel_token_hash"`
	CreatedAt       time.Time          `json:"created_at"`
	UpdatedAt       time.Time          `json:"updated_at"`
	DeletedAt       time.Time          `json:"deleted_at"`
}

type Location struct {
	ID                              uuid.UUID   `json:"id"`
	OwnerUsername                   string      `json:"owner_username"`
	Name                            string      `json:"name"`
	Slug                            string      `json:"slug"`
	Timezone                        string      `json:"timezone"`
	IsActive                        bool        `json:"is_active"`
	BookingRequiresHostApproval     bool        `json:"booking_requires_host_approval"`
	CancellationMinHoursBeforeStart pgtype.Int4 `json:"cancellation_min_hours_before_start"`
	CreatedAt                       time.Time   `json:"created_at"`
	UpdatedAt                       time.Time   `json:"updated_at"`
	DeletedAt                       time.Time   `json:"deleted_at"`
	LogoUrl                         pgtype.Text `json:"logo_url"`
	PrimaryColor                    pgtype.Text `json:"primary_color"`
	AccentColor                     pgtype.Text `json:"accent_color"`
	FontFamily                      pgtype.Text `json:"font_family"`
	BackgroundColor                 pgtype.Text `json:"background_color"`
}

type Practitioner struct {
	ID          uuid.UUID `json:"id"`
	LocationID  uuid.UUID `json:"location_id"`
	Name        string    `json:"name"`
	DisplayName string    `json:"display_name"`
	IsActive    bool      `json:"is_active"`
	CreatedAt   time.Time `json:"created_at"`
	UpdatedAt   time.Time `json:"updated_at"`
	DeletedAt   time.Time `json:"deleted_at"`
}

type Room struct {
	ID         uuid.UUID `json:"id"`
	LocationID uuid.UUID `json:"location_id"`
	Name       string    `json:"name"`
	IsActive   bool      `json:"is_active"`
	CreatedAt  time.Time `json:"created_at"`
	UpdatedAt  time.Time `json:"updated_at"`
	DeletedAt  time.Time `json:"deleted_at"`
}

type Service struct {
	ID                              uuid.UUID   `json:"id"`
	LocationID                      uuid.UUID   `json:"location_id"`
	Name                            string      `json:"name"`
	Description                     string      `json:"description"`
	DurationMinutes                 int32       `json:"duration_minutes"`
	PriceMinorUnits                 int64       `json:"price_minor_units"`
	Currency                        string      `json:"currency"`
	IsActive                        bool        `json:"is_active"`
	CancellationMinHoursBeforeStart pgtype.Int4 `json:"cancellation_min_hours_before_start"`
	CreatedAt                       time.Time   `json:"created_at"`
	UpdatedAt                       time.Time   `json:"updated_at"`
	DeletedAt                       time.Time   `json:"deleted_at"`
}

type Session struct {
	ID           uuid.UUID `json:"id"`
	Username     string    `json:"username"`
	RefreshToken string    `json:"refresh_token"`
	UserAgent    string    `json:"user_agent"`
	ClientIp     string    `json:"client_ip"`
	IsBlocked    bool      `json:"is_blocked"`
	ExpiresAt    time.Time `json:"expires_at"`
	CreatedAt    time.Time `json:"created_at"`
}

type User struct {
	ID                int64       `json:"id"`
	Username          string      `json:"username"`
	HashedPassword    string      `json:"hashed_password"`
	FirstName         string      `json:"first_name"`
	LastName          string      `json:"last_name"`
	Email             string      `json:"email"`
	PasswordChangedAt time.Time   `json:"password_changed_at"`
	CreatedAt         time.Time   `json:"created_at"`
	UpdatedAt         time.Time   `json:"updated_at"`
	DeletedAt         time.Time   `json:"deleted_at"`
	IsEmailVerified   bool        `json:"is_email_verified"`
	GoogleID          pgtype.Text `json:"google_id"`
	Roles             []string    `json:"roles"`
}

type VerificationEmail struct {
	ID                int64     `json:"id"`
	Email             string    `json:"email"`
	VerificationToken string    `json:"verification_token"`
	IsUsed            bool      `json:"is_used"`
	CreatedAt         time.Time `json:"created_at"`
	TokenExpiry       time.Time `json:"token_expiry"`
}

type WaitlistEntry struct {
	ID             uuid.UUID          `json:"id"`
	LocationID     uuid.UUID          `json:"location_id"`
	ServiceID      uuid.UUID          `json:"service_id"`
	SlotID         uuid.UUID          `json:"slot_id"`
	GuestName      string             `json:"guest_name"`
	GuestEmail     string             `json:"guest_email"`
	GuestPhone     pgtype.Text        `json:"guest_phone"`
	PractitionerID pgtype.UUID        `json:"practitioner_id"`
	PreferredDate  pgtype.Date        `json:"preferred_date"`
	Status         string             `json:"status"`
	OfferTokenHash pgtype.Text        `json:"offer_token_hash"`
	OfferExpiresAt pgtype.Timestamptz `json:"offer_expires_at"`
	CreatedAt      time.Time          `json:"created_at"`
	UpdatedAt      time.Time          `json:"updated_at"`
	DeletedAt      time.Time          `json:"deleted_at"`
}
