Project ytter {
  database_type: 'PostgreSQL'
  Note: '''
    # ytter db
  '''
}

Table users as U {
  id bigserial [pk]
  username varchar [unique, not null]
  roles varchar[] [not null, default: '{}']
  hashed_password varchar [not null]
  first_name varchar [not null]
  last_name varchar [not null]
  email varchar [unique, not null]
  is_email_verified bool [not null, default: false]
  google_id varchar [unique]
  password_changed_at timestamptz [not null, default: "0001.01.01 00:00:00Z"]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: "0001.01.01 00:00:00Z"]
  deleted_at timestamptz [not null, default: "0001.01.01 00:00:00Z"]
}

Table verification_emails {
  id bigserial [pk]
  email varchar [not null]
  verification_token varchar [not null]
  is_used bool [not null, default: false]
  created_at timestamptz [not null, default: `now()`]
  token_expiry timestamptz [not null, default: `now() + interval '15 minutes'`]
}

Table sessions {
  id uuid [pk]
  username varchar [not null]
  refresh_token varchar [not null]
  user_agent varchar [not null]
  client_ip varchar [not null]
  is_blocked bool [not null, default: false]
  expires_at timestamptz [not null]
  created_at timestamptz [not null, default: `now()`]
}

Table locations {
  id uuid [pk, default: `gen_random_uuid()`]
  owner_username varchar [not null]
  name varchar [not null]
  slug varchar [not null]
  timezone varchar [not null]
  is_active bool [not null, default: true]
  booking_requires_host_approval bool [not null, default: false]
  cancellation_min_hours_before_start int
  logo_url text
  primary_color varchar(7)
  accent_color varchar(7)
  background_color varchar(7)
  font_family varchar(64)
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: "0001.01.01 00:00:00Z"]
  deleted_at timestamptz [not null, default: "0001.01.01 00:00:00Z"]
}

Table services {
  id uuid [pk, default: `gen_random_uuid()`]
  location_id uuid [not null]
  name varchar [not null]
  description varchar [not null, default: '']
  duration_minutes int [not null]
  price_minor_units bigint [not null, default: 0]
  currency varchar [not null, default: 'GBP']
  is_active bool [not null, default: true]
  cancellation_min_hours_before_start int
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: "0001.01.01 00:00:00Z"]
  deleted_at timestamptz [not null, default: "0001.01.01 00:00:00Z"]
}

Table practitioners {
  id uuid [pk, default: `gen_random_uuid()`]
  location_id uuid [not null]
  name varchar [not null]
  display_name varchar [not null]
  is_active bool [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: "0001.01.01 00:00:00Z"]
  deleted_at timestamptz [not null, default: "0001.01.01 00:00:00Z"]
}

Table rooms {
  id uuid [pk, default: `gen_random_uuid()`]
  location_id uuid [not null]
  name varchar [not null]
  is_active bool [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: "0001.01.01 00:00:00Z"]
  deleted_at timestamptz [not null, default: "0001.01.01 00:00:00Z"]
}

Table appointment_slots {
  id uuid [pk, default: `gen_random_uuid()`]
  location_id uuid [not null]
  service_id uuid [not null]
  practitioner_id uuid
  room_id uuid
  start_at timestamptz [not null]
  end_at timestamptz [not null]
  capacity int [not null, default: 1]
  booked_count int [not null, default: 0]
  status varchar [not null, default: 'available']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: "0001.01.01 00:00:00Z"]
  deleted_at timestamptz [not null, default: "0001.01.01 00:00:00Z"]
}

Table bookings {
  id uuid [pk, default: `gen_random_uuid()`]
  location_id uuid [not null]
  slot_id uuid [not null]
  status varchar [not null]
  guest_name varchar [not null]
  guest_email varchar [not null]
  guest_phone varchar
  guest_notes varchar
  client_username varchar
  booked_at timestamptz [not null, default: `now()`]
  cancelled_at timestamptz
  cancel_reason varchar
  cancel_token_hash varchar(64) [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: "0001.01.01 00:00:00Z"]
  deleted_at timestamptz [not null, default: "0001.01.01 00:00:00Z"]
}

Ref: sessions.username > users.username
Ref: locations.owner_username > users.username
Ref: services.location_id > locations.id
Ref: practitioners.location_id > locations.id
Ref: rooms.location_id > locations.id
Ref: appointment_slots.location_id > locations.id
Ref: appointment_slots.service_id > services.id
Ref: appointment_slots.practitioner_id > practitioners.id
Ref: appointment_slots.room_id > rooms.id
Ref: bookings.location_id > locations.id
Ref: bookings.slot_id > appointment_slots.id
Ref: bookings.client_username > users.username